--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1> Tarea chida para el profe</h1>
   <p> algo.</p>
-  <img src="https://static.wikia.nocookie.net/yugiohenespanol/images/8/82/Enlacekuriboh.jpg/revision/latest?cb=20210112161220&path-prefix=es" alt="Imagen">
+  <img src="Enlacekuriboh.webp" alt="Imagen">
 </body>
 </html>
