--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title> Ejemplo de código HTML</title>
 </head>
 <body>
-  <h1> Tarea chida para el profe</h1>
-  <p> algo.</p>
+  <h1> Tarea para el profe</h1>
+  <p> Jorge Antonio Martinez Castellanos 185211.</p>
   <img src="Enlacekuriboh.webp" alt="Imagen">
 </body>
 </html>
