--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1> Tarea para el profe</h1>
   <p> Jorge Antonio Martinez Castellanos 185211.</p>
-  <img src="Enlacekuriboh.webp" alt="Imagen">
+  <img src="Enlacekuriboh.webp" alt="Imagen" width="300">
 </body>
 </html>
