--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"  >
   <title> Ejemplo de código HTML</title>
 </head>
 <body>
   <h1> Tarea para el profe</h1>
   <p> Jorge Antonio Martinez Castellanos 185211.</p>
-  <img src="Enlacekuriboh.webp" alt="Imagen" width="300">
+  <img src="Enlacekuriboh.webp" alt="Imagen" width="300" style="transform: rotate(45deg);" >
 </body>
 </html>
